tests/ty-var-annot-05/out.txt
error: mismatched types: expected unit, found 't27 -> 't27 bad
  ┌─ err.sml:4:1
  │
4 │ val _: unit = Bad
  │ ^^^^^^^^^^^^^^^^^

typechecking failed
